src/k8s/testlab/postgresql-operator/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pgdb-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: databases
