src/k8s/testlab/postgresql-operator/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-operator-ui
  namespace: pgdb-operator
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /postgres-operator-ui
            backend:
              service:
                name: postgres-operator-ui
                port:
                  number: 8081
